# uc

./: .gitignore  pyproject.toml
tests/: test_catalogclient.py  test_client.py  test_management.py
uc/api/: README.md  __init__.py  api.py
uc/databricks/: http_client.py
uc/management/: __init__.py  management.py
uc/utils/: scim.py
